fixed the movie title on mobile

--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -29,4 +29,9 @@
   .movies__grid {
     padding: 1rem;
   }
+
+  .movies__list-title-div {
+    padding-left: 1rem;
+    padding-bottom: 0rem;
+  }
 }
